--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "sharp": "^0.30.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
