auth with firebase

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.0",
+    "firebase": "^9.8.1",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "phosphor-react": "^1.4.1",
