--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.0.0",
     "react-google-charts": "^4.0.0",
     "react-infinite-scroll-hook": "^4.0.3",
+    "react-parallax-tilt": "^1.7.35",
     "react-stockcharts": "^0.7.8",
     "sharp": "^0.30.4",
     "shortid": "^2.2.16",
