--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.0",
     "d3-dsv": "^3.0.1",
     "d3-format": "^3.1.0",
@@ -20,6 +21,7 @@
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.0.0",
     "react-google-charts": "^4.0.0",
     "react-infinite-scroll-hook": "^4.0.3",
