--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "moment": "^2.29.3",
     "next": "12.1.5",
